ingressresource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-quote
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx #this should match the cert manager resource name
spec:
  tls:
  - hosts:
    - quote.obinnaaliogor.xyz
    secretName: letsencrypt-nginx #this should match the cert manager resource name
  rules:
    - host: quote.obinnaaliogor.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote
                port:
                  number: 8080
  ingressClassName: nginx
